--- a/styles/components/user_interface.css
+++ b/styles/components/user_interface.css
@@ -26,6 +26,7 @@ body {
     font-size: var(--size-xl);
     font-weight: 600;
     letter-spacing: .2em;
+    padding: 1.25em;
 }
 
 .ui__element span {
