--- a/styles/components/credits.css
+++ b/styles/components/credits.css
@@ -1,6 +1,6 @@
 .creators {
     text-align: center;
-    padding: 10px;
+    padding: 2em;
     font-weight: 700;
     letter-spacing: 1px;
     font-size: var(--size-2xl);
