--- a/styles/components/keybindings.css
+++ b/styles/components/keybindings.css
@@ -1,10 +1,10 @@
-.keys__movement {
+.keys {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
 }
 
-.keys__movement img {
+.keys img {
     width: 30px;
 }
