--- a/styles/components/login.css
+++ b/styles/components/login.css
@@ -1,4 +1,5 @@
 .container__login {
+    background: linear-gradient(to bottom, var(--clr-blue), var(--clr-red));
     border-radius: 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
