--- a/styles/utils.css
+++ b/styles/utils.css
@@ -51,7 +51,7 @@
   font-weight: 700;
   outline: none;
   position: relative;
-  background-color: var(--clr-dark);
+  background-color: none;
   border: solid 1px transparent;
   border-radius: 10px;
   margin-top: 0.75em;
@@ -63,6 +63,7 @@
 .btn:hover a {
   transform: scale(1.2);
   color: var(--clr-blue);
+  background-color: var(--clr-gray);
 }
 
 .container {
