--- a/styles/components/ranking.css
+++ b/styles/components/ranking.css
@@ -43,20 +43,9 @@
     color: var(--clr-blue);
 }
 
-/* Scrollbar */
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: var(--clr-blue);
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: var(--clr-red);
-    border-radius: 25px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: var(--clr-red);
+/* sm */
+@media (max-width: 475px) {
+    .container__ranking {
+        min-width: 15em;
+    }
 }
