--- a/styles/utils.css
+++ b/styles/utils.css
@@ -1,20 +1,20 @@
 /* xs */
-/* @media (min-width: 475px) {} */
+/* @media (max-width: 475px) {} */
 
 /* sm */
-/* @media (min-width: 640px) {} */
+/* @media (max-width: 640px) {} */
 
 /* md */
-/* @media (min-width: 768px) {} */
+/* @media (max-width: 768px) {} */
 
 /* lg */
-/* @media (min-width: 1024px) {} */
+/* @media (max-width: 1024px) {} */
 
 /* xl */
-/* @media (min-width: 1280px) {} */
+/* @media (max-width: 1280px) {} */
 
 /* 2xl */
-/* @media (min-width: 1536px) {} */
+/* @media (max-width: 1536px) {} */
 
 .logo {
   position: relative;
@@ -86,4 +86,22 @@
   color: var(--clr-blue);
   text-shadow: 1px 1px 1px white, -1px 1px 1px white, -1px -1px 0 white,
     1px -1px 0 white;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--clr-blue);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--clr-red);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--clr-red);
 }
