--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,24 +17,14 @@
 /* @media (max-width: 1536px) {} */
 
 .logo {
+  animation-name: animateLogo;
+  animation-duration: 2s;
   position: relative;
 }
 
-.container__section {
-  display: none;
-  padding: 1.25em;
-}
-
-#sectionMain {
-  display: block;
-}
-
-.active-section {
-  display: block;
-}
-
-#logout {
-  display: none;
+.animate {
+  animation-name: animateLogo2;
+  animation-duration: 2s;
 }
 
 .btn {
@@ -62,19 +52,7 @@
   background-color: var(--clr-gray);
 }
 
-.container {
-  padding: 2em;
-}
-
-.container__list {
-  position: relative;
-  width: 25em;
-  margin: auto;
-  list-style-type: none;
-  padding: 1.5em;
-}
-
-.currentUser {
+/* .currentUser {
   display: none;
   letter-spacing: .2em;
   font-weight: 600;
@@ -84,8 +62,30 @@
 
 .user {
   color: var(--clr-blue);
-  text-shadow: 1px 1px 1px white, -1px 1px 1px white, -1px -1px 0 white,
-    1px -1px 0 white;
+  text-shadow: 1px 1px 1px var(--clr-light), -1px 1px 1px var(--clr-light), -1px -1px 0 var(--clr-light),
+    1px -1px 0 var(--clr-light);
+} */
+
+@keyframes animateLogo {
+  0% {
+    left: 1000px;
+    top: 0px;
+  }
+  100% {
+    left: 0px;
+    top: 0px;
+  }
+}
+
+@keyframes animateLogo2 {
+  0% {
+    left: 0px;
+    top: 0px;
+  }
+  100% {
+    left: -1200px;
+    top: 0px;
+  }
 }
 
 /* Scrollbar */
