--- a/styles/components/user_interface.css
+++ b/styles/components/user_interface.css
@@ -3,6 +3,9 @@ body {
 }
 
 .navbar {
+  position: absolute;
+  top: 0;
+  background: transparent;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -42,34 +45,12 @@ body {
 .ui__element img {
   width: 50px;
   height: auto;
-  display: none;
 }
 
-.ui__element .coin {
+.ui__element .coins {
   display: block;
 }
 
 .ui__boost {
   display: flex;
-}
-.game-over {
-  font-size: var(--size-4xl);
-  font-weight: 800;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5em;
-  letter-spacing: 0.2rem;
-  padding: 5em;
-  text-shadow: 1px 1px 1px var(--clr-light), -1px 1px 1px var(--clr-light),
-    -1px -1px 0 var(--clr-light), 1px -1px 0 var(--clr-light);
-}
-
-.game-over__scores span {
-  color: var(--clr-red);
-}
-
-.play-again {
-  color: var(--clr-blue);
 }
